check out page added

--- a/checkout.html
+++ b/checkout.html
@@ -23,6 +23,8 @@
     <!-- Checkout-Wrapper -->
     <div id="checkout-wrapper" class="checkout-wrapper">
         <!-- Form -->
+        <h5>dummy
+        </h5>
         <form action="" class="form-details">
             <h2 class="title">BILLING DETAILS</h2>
             <!-- Customer Name -->
